# Athena

./: .gitignore  .gitmodules  Athena.sln  Athena.vcxproj  Athena.vcxproj.filters  AthenaPlans.txt  CMakeLists.txt  Dependencies.cmake  Dependencies.lua  GenerateProjects.bat  LICENSE  README.md  premake5.lua
Athena/: Athena.def  Athena.vcxproj  Athena.vcxproj.filters  CMakeLists.txt  premake5.lua
Athena-Editor/: CMakeLists.txt  imgui.ini  premake5.lua  ÌÌÌÌÌ  ÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝ
Athena-Editor/Assets/Meshes/: BlenderScene.fbx
Athena-Editor/Assets/Meshes/Beretta Pistol/: Beretta Pistol.fbx
Athena-Editor/Assets/Meshes/Spiderman/: Spiderman.fbx
Athena-Editor/Assets/Scenes/: 2DExample.atn  3DExample.atn  BlenderScene.fbx  Default.atn  PBR_Example.atn  Physics2D.atn  PhysicsExample.atn  Sponza.atn  Test.atn
Athena-Editor/Assets/Scripts/: Athena.py  Athena_Core.py  CMakeLists.txt  Camera.py  Camera2D.py  Config.cmake  FirstPersonCamera.py  Player.py  Player2D.py  Test.py  VS2022-GenProjects.bat  main.py
Athena-Editor/Assets/Scripts/Athena/: Entity.py  InputDevices.py
Athena-Editor/Assets/Scripts/Internal/: Entity.py  Input.py  Log.py
Athena-Editor/Assets/Scripts/Source/: Camera.cpp  Camera.h  FirstPersonCamera.cpp  FirstPersonCamera.h
Athena-Editor/Assets/Shaders/: ComputeBRDF_LUT.glsl  ComputeEquirectangularToCubemap.glsl  ComputeIrradianceMap.glsl  ComputePrefilterMap.glsl  ComputePrefilteredMap.glsl  ConvoluteEnvMap.glsl  EntityID.glsl  EnvironmentMipFilter.glsl  EquirectangularToCubemap.glsl  GenIrradianceMap.glsl  GenPrefilterMap.glsl  Line.glsl  PBR.glsl  PBR_Anim.glsl  PBR_FS.glsl  PBR_Static.glsl  PoissonDisk.glsl  Quad.glsl  Renderer2D_Quad.hlsl  Renderer_PBR.glsl  SceneComposite.glsl  ShadowMap.glsl  Skybox.glsl  Test.glsl  Test.hlsl
Athena-Editor/Assets/Shaders/Debug/: Normals.glsl  Normals_Anim.glsl  Normals_Static.glsl  ShowCascades.glsl  Wireframe.glsl  Wireframe_Anim.glsl  Wireframe_Static.glsl
Athena-Editor/Assets/Shaders/Renderer2D/: Circle.glsl  Line.glsl  Line.hlsl  Quad.glsl
Athena-Editor/EditorResources/Tmp/: EditorScene.atn
Athena-Editor/Resources/Shaders/: Renderer2D_Circle.hlsl  Renderer_PBR.glsl
Athena-Editor/Source/: AthenaEditorApp.cpp  EditorContext.h  EditorLayer.cpp  EditorLayer.h  EditorResources.cpp  EditorResources.h  ImGuizmoLayer.cpp  ImGuizmoLayer.h  PanelManager.cpp  PanelManager.h  SceneManager.h  SelectionManager.h  Titlebar.cpp  Titlebar.h
Athena-Editor/Source/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EditorSettingsPanel.cpp  EditorSettingsPanel.h  MenuBarPanel.cpp  MenuBarPanel.h  Panel.h  PanelManager.cpp  PanelManager.h  ProfilingPanel.cpp  ProfilingPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SettingsPanel.cpp  SettingsPanel.h  ViewportPanel.cpp  ViewportPanel.h
Athena-Editor/Source/UI/: Controllers.cpp  Utils.cpp  Utils.h  Widgets.cpp  Widgets.h
Athena-Editor/assets/Scenes/: PhysicsExample.atn
Athena-Editor/assets/scene/: 3DExample.atn  Example.atn  Example.atnscene  PhysicsExample.atn  Test.atn
Athena-Editor/assets/shaders/: Circle.glsl  Line.glsl  Quad.glsl  Texture.glsl
Athena-Editor/src/: AthenaEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Athena-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Athena-Editor/src/UI/: Controllers.cpp  Controllers.h  Icon.h
Athena-Editor/src/UILib/: Utils.cpp  Utils.h
Athena-ScriptCore/: CMakeLists.txt
Athena-ScriptCore/Source/: Test.cpp
Athena/EngineResources/Cache/Shaders/: Test.glsl.cached.frag  Test.glsl.cached.vert
Athena/EngineResources/Scripting/: Config-Template.cmake  Script-Template.cpp  Script-Template.h
Athena/EngineResources/ShaderPack/: BRDF_LUT.glsl  BRDF_LUT.hlsl  BloomDownsample.glsl  BloomUpsample.glsl  Buffers.glslh  Buffers.hlsli  Common.glslh  Common.hlsli  DeferredLighting.glsl  DirShadowMap_Anim.glsl  DirShadowMap_Static.glsl  EnvironmentMipFilter.glsl  EquirectangularToCubemap.glsl  FXAA.glsl  GBuffer_Anim.glsl  GBuffer_Static.glsl  HBAO-Blur.glsl  HBAO-BlurX.glsl  HBAO-BlurY.glsl  HBAO-Compute.glsl  HBAO-Deinterleave.glsl  HiZ.glsl  IrradianceMapConvolution.glsl  LightCulling.glsl  Lighting.glsl  PBR_Anim.glsl  PBR_Static.glsl  PBR_Static.hlsl  PanoramaToCubemap.glsl  PanoramaToCubemap.hlsl  Pre-Convolution.glsl  PreethamSky.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  SMAA-Blending.glsl  SMAA-Edges.glsl  SMAA-Weights.glsl  SMAA.glslh  (+8 more)
Athena/EngineResources/ShaderPack/Debug/: Wireframe.glsl
Athena/EngineResources/ShaderPack/Editor/: JumpFlood-Composite.glsl  JumpFlood-Init.glsl  JumpFlood-Pass.glsl  JumpFlood-Silhouette_Anim.glsl  JumpFlood-Silhouette_Static.glsl  JumpFlood_Composite.glsl  JumpFlood_Init.glsl  JumpFlood_Pass.glsl  JumpFlood_Silhouette_Static.glsl
Athena/EngineResources/ShaderPack/Include/: Buffers.glslh  Common.glslh  HBAO.glslh  Lighting.glslh  PBR.glslh  PoissonDisk.glslh  SMAA.glslh  Shadows.glslh
Athena/EngineResources/ShaderPack/Renderer2D/: EntityID.glsl
Athena/EngineResources/ShaderPack/Vulkan/: Buffers.hlsli  Test.glsl  Test.hlsl
Athena/EngineResources/Shaders/: BloomDownsample.glsl  EnvironmentMipFilter.glsl  PBR.glsl  Skybox.glsl
Athena/EngineResources/Shaders/Debug/: ShadowCascades.glsl  ShowCascades.glsl  Wireframe.glsl
Athena/Source/: Athena.h  EntryPoint.h  atnpch.cpp  atnpch.h
Athena/Source/Athena/Core/: Assert.h  (+24 more)
Athena/src/: Athena.h  Test.cpp  Test.h  atnpch.h
Athena/src/Athena/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
SandBox/: AthenaProfile-Shutdown.json  AthenaProfile-Startup.json  CMakeLists.txt  SandBox.vcxproj  imgui.ini  premake5.lua
SandBox/Source/: SandBox2D.cpp  SandBox2D.h  SandBoxApp.cpp  SandBoxLayer.cpp  SandBoxLayer.h
SandBox/assets/shaders/: FlatColor.glsl  Grid.glsl  Texture.glsl
SandBox/src/: SandBox2D.cpp  SandBox2D.h  SandBoxApp.cpp  main.cpp
(+513 files in other folders)
